fixed text bleed at bottom of contact.html

--- a/kenstyle.css
+++ b/kenstyle.css
@@ -253,6 +253,7 @@ margin-top: 0
 	font-size: 18px;
 	margin-left: 15%;
 	margin-right: 15%;
+	margin-bottom: 100px;
 }
 #story_box {
 	padding-bottom: 10px;
